<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:gravity="center_horizontal" android:background="@color/main_background">

	<TextView android:layout_height="wrap_content" android:id="@+id/main_title"
		android:text="@string/main_title" android:gravity="center_horizontal"
		android:textSize="3mm" android:layout_marginTop="5mm"
		android:layout_width="wrap_content" android:textColor="@color/main_foreground"></TextView>
	<Button android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:textSize="3mm" android:textColor="@color/main_foreground" android:layout_marginTop="3mm" android:id="@+id/view_call_log_button" android:text="@string/view_call_log_button"></Button>
	<Button android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_marginTop="1mm"
		android:textSize="3mm" android:id="@+id/update_blacklist_button"
		android:text="@string/update_blacklist_button" android:textColor="@color/main_foreground"></Button>
	<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="bottom" android:id="@+id/last_updated_layout" android:layout_marginTop="3mm">
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/blacklist_last_updated_label"
			android:text="@string/blacklist_last_updated_label" android:layout_marginRight="1mm" android:textColor="@color/main_foreground"></TextView>
		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:id="@+id/blacklist_last_updated_text"
			android:textColor="@color/main_foreground" android:text="@string/blacklist_never_updated"></TextView>

	</LinearLayout>
</LinearLayout>
